--- a/MedicineAndroid/app/src/main/res/layout/fragment_home.xml
+++ b/MedicineAndroid/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
     android:orientation="vertical"
-    tools:context=".HomeFragment">
+    tools:context=".Main.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -50,6 +50,7 @@
 
     <Button
         android:id="@+id/btn_disconnect"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
