--- a/MedicineAndroid/app/src/main/res/layout/fragment_login.xml
+++ b/MedicineAndroid/app/src/main/res/layout/fragment_login.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main.FirstFragment">
+    tools:context=".Main.LoginFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/loginViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="操作界面" />
+        android:layout_height="match_parent">
+    </android.support.v4.view.ViewPager>
 
 </FrameLayout>
