--- a/MedicineAndroid/app/src/main/res/menu/navigation.xml
+++ b/MedicineAndroid/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_operation"
+        android:id="@+id/navigation_first"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="操作" />
 
     <item
-        android:id="@+id/navigation_account"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:id="@+id/navigation_login"
+        android:icon="@drawable/ic_notifications_black_24dp"
         android:title="账号" />
 
-    <!--item
-        android:id="@+id/navigation_server"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="服务器配置" /-->
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="服务器配置" />
 
 </menu>
